--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/alertmanager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/alertmanager.yaml.j2
@@ -31,4 +31,7 @@ spec:
     fsGroup: 2000
     runAsNonRoot: true
     runAsUser: 1000
+    # TODO : readOnlyRootFilesystem is present in the CRD, but it doesn't get injected at the container level
+    # I guess this section is only applied at the POD level.
+    #readOnlyRootFilesystem: true
   serviceAccountName: alertmanager-k8s
