--- a/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/statefulSet.yaml.j2
@@ -21,11 +21,16 @@ spec:
         {{ heimdall.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
-      - image: "{{ heimdall.container.image }}"
-        name: heimdall
+      - name: heimdall
+        image: "{{ heimdall.container.image }}"
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
           name: http
+        securityContext:
+          # TODO : heimdall requires to run as root and write to the rootFS for now :/
+          #runAsNonRoot: true
+          #readOnlyRootFilesystem: true
         resources:
           requests:
             cpu: "{{ heimdall.container.requests_cpu }}"
@@ -33,9 +38,18 @@ spec:
           limits:
             cpu: "{{ heimdall.container.limits_cpu }}"
             memory: "{{ heimdall.container.limits_memory }}"
+        # TODO : it seems using an HTTP probe before its setup is complete breaks the app
+        #readinessProbe:
+        #  httpGet:
+        #    scheme: HTTP
+        #    path: /
+        #    port: http
+        #  initialDelaySeconds: 3
+        #  periodSeconds: 5
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
+          readOnly: true
         - name: heimdall-data-pv-claim
           mountPath: /config
         - name: heimdall-config
