--- a/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/service-private.yaml.j2
+++ b/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/service-private.yaml.j2
@@ -16,36 +16,32 @@ spec:
   # Port used for STUN.
   - name: stun
     port: 3478
-    targetPort: 3478
+    targetPort: stun
     protocol: UDP
   # Port used for device and controller communication.
   - name: http-crtl
     port: 8080
-    targetPort: 8080
+    targetPort: http-crtl
     protocol: TCP
   # Port used for controller GUI/API as seen in a web browser
   - name: https-crtl
     port: 8443
-    targetPort: 8443
+    targetPort: https-crtl
   # Port used for HTTP portal redirection.
   - name: http-portal
     port: 8880
-    targetPort: 8880
+    targetPort: http-portal
     protocol: TCP
   # Port used for HTTPS portal redirection.
   - name: https-portal
     port: 8843
-    targetPort: 8843
+    targetPort: https-portal
     protocol: TCP
   # Port used for UniFi mobile speed test.
   - name: speed-test
     port: 6789
-    targetPort: 6789
+    targetPort: speed-test
     protocol: TCP
   # Port used for AP discovery
-  - name: ap-discovery
-    port: 10001
-    targetPort: 10001
-    protocol: UDP
   selector:
     {{ unifi.labels_def | to_nice_yaml() | indent(4) }}
