Implement manifest best practices for home-homeassistant

--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/homeassistant-service.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/homeassistant-service.yaml.j2
@@ -9,6 +9,7 @@ metadata:
 spec:
   ports:
   - port: 80
-    targetPort: 8123
+    name: homeassistant
+    targetPort: homeassistant
   selector:
     {{ homeassistant.labels_def | to_nice_yaml() | indent(4) }}
