--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/homeassistant-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/homeassistant-statefulSet.yaml.j2
@@ -20,17 +20,33 @@ spec:
         {{ homeassistant.labels_def | to_nice_yaml() | indent(8) }}
         {{ homeassistant.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
+      initContainers:
+      - name: create-folders
+        image: "{{ busybox.container.image }}"
+        imagePullPolicy: Always
+        command:
+          - "sh"
+          - "-c"
+          - |
+            mkdir -p /homeassistant-config/config
+            chown -R 1000:1000 /homeassistant-config/config
+        volumeMounts:
+        - name: homeassistant-pv-claim
+          mountPath: /homeassistant-config
       containers:
-      - image: "{{ homeassistant.container.image }}"
-        name: homeassistant
+      - name: homeassistant
+        image: "{{ homeassistant.container.image }}"
+        imagePullPolicy: Always        
         ports:
         - containerPort: 8123
           name: homeassistant
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
+          readOnly: true
         - name: homeassistant-pv-claim
           mountPath: /config
+          subPath: config
         - name: homeassistant-socat-config
           mountPath: /etc/supervisor/conf.d/
         - name: homeassistant-config
@@ -39,6 +55,19 @@ spec:
         - name: cluster-ca-volume
           mountPath: /etc/ssl/cluster/ca.cert
           subPath: ca.crt
+        - name: run-volume
+          mountPath: /run/udev
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 1000 # homeassistant
+          readOnlyRootFilesystem: true
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /
+            port: homeassistant
+          initialDelaySeconds: 3
+          periodSeconds: 5
         resources:
           requests:
             cpu: "{{ homeassistant.container.requests_cpu }}"
@@ -59,6 +88,8 @@ spec:
       - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
+      - name: run-volume
+        emptyDir: {}
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
