--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/mysql-service.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/mysql-service.yaml.j2
@@ -9,6 +9,6 @@ metadata:
 spec:
   ports:
     - port: 3306
+      name: mysql
   selector:
     {{ homeassistant_mysql.labels_def | to_nice_yaml() | indent(4) }}
-  clusterIP: None
