--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/mysql-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/mysql-statefulSet.yaml.j2
@@ -18,9 +18,23 @@ spec:
         {{ homeassistant_mysql.labels_def | to_nice_yaml() | indent(8) }}
         {{ homeassistant_mysql.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
+      initContainers:
+      - name: create-folders
+        image: "{{ busybox.container.image }}"
+        imagePullPolicy: Always
+        command:
+          - "sh"
+          - "-c"
+          - |
+            mkdir -p /homeassistant-mysql-pv-claim/mysql
+            chown -R 1000:1000 /homeassistant-mysql-pv-claim/mysql
+        volumeMounts:
+        - name: homeassistant-mysql-pv-claim
+          mountPath: /homeassistant-mysql-pv-claim
       containers:
-      - image: "{{ homeassistant_mysql.container.image }}"
-        name: mysql
+      - name: mysql
+        image: "{{ homeassistant_mysql.container.image }}"
+        imagePullPolicy: Always        
         env:
         - name: MYSQL_DATABASE
           value: {{ homeassistant_mysql.database }}
@@ -39,11 +53,29 @@ spec:
         ports:
         - containerPort: 3306
           name: mysql
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 1000 # random uid
+          readOnlyRootFilesystem: true
+        readinessProbe:
+          exec:
+            command:
+            - sh
+            - -c
+            - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
+          initialDelaySeconds: 3
+          periodSeconds: 5
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
+          readOnly: true
         - name: homeassistant-mysql-pv-claim
           mountPath: /var/lib/mysql
+          subPath: mysql
+        - name: tmp-volume
+          mountPath: /tmp
+        - name: run-volume
+          mountPath: /var/run/mysqld
         resources:
           requests:
             cpu: "{{ homeassistant_mysql.container.requests_cpu }}"
@@ -55,6 +87,10 @@ spec:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      - name: tmp-volume
+        emptyDir: {}
+      - name: run-volume
+        emptyDir: {}
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
