Implement manifest best practices for home-nodered

--- a/ansible/install_applications/roles/home-nodered.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/home-nodered.deploy/app/deploy/service.yaml.j2
@@ -9,6 +9,6 @@ metadata:
 spec:
   ports:
   - port: 80
-    targetPort: 1880
+    targetPort: nodered
   selector:
     {{ nodered.labels_def | to_nice_yaml() | indent(4) }}
