--- a/ansible/install_applications/roles/home-roomassistant.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/home-roomassistant.deploy/app/deploy/deployment.yaml.j2
@@ -20,8 +20,9 @@ spec:
         {{ roomassistant.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
-      - image: "{{ roomassistant.container.image }}"
-        name: roomassistant
+      - name: roomassistant
+        image: "{{ roomassistant.container.image }}"
+        imagePullPolicy: Always
 {% if roomassistant.environment_variables | default({}) | length > 0 %}
         env:
 {% for env_var in roomassistant.environment_variables | dict2items %}
@@ -29,6 +30,10 @@ spec:
           value: "{{ env_var.value }}"
 {% endfor %}
 {% endif %}
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 1000 # node
+          readOnlyRootFilesystem: true
         resources:
           requests:
             cpu: "{{ roomassistant.container.requests_cpu }}"
@@ -39,6 +44,7 @@ spec:
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
+          readOnly: true
       volumes:
       - name: tz-config
         hostPath:
