--- a/ansible/install_applications/roles/stream-airsonic.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/stream-airsonic.deploy/app/deploy/statefulSet.yaml.j2
@@ -21,12 +21,27 @@ spec:
         {{ airsonic.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       initContainers:
+      - name: create-folders
+        image: "{{ busybox.container.image }}"
+        command:
+          - "sh"
+          - "-c"
+          - |
+            mkdir -p /airsonic/data
+            chown -R 1000:1000 /airsonic/data
+        volumeMounts:
+        - name: airsonic-data-pv-claim
+          mountPath: /airsonic
       - name: inject-properties
         image: "{{ busybox.container.image }}"
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 1000
         command: [ "sh", "/config/inject_properties.sh" ]
         volumeMounts:
         - name: airsonic-data-pv-claim
           mountPath: /airsonic/data
+          subPath: data
         - name: airsonic-config
           mountPath: /config
       - name: inject-certificates
@@ -47,8 +62,9 @@ spec:
           mountPath: /etc/ssl/cluster/ca.crt
           subPath: ca.crt
       containers:
-      - image: "{{ airsonic.container.image }}"
-        name: airsonic
+      - name: airsonic
+        image: "{{ airsonic.container.image }}"
+        imagePullPolicy: Always        
         ports:
         - containerPort: 4040
           name: airsonic
@@ -61,6 +77,17 @@ spec:
         - name: JAVA_OPTS
           value: "{{ airsonic.extra_java_opts | join(' ') }}"
 {% endif %}
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 1000
+          readOnlyRootFilesystem: true
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: {{ airsonic.context_path }}/rest/ping
+            port: airsonic
+          initialDelaySeconds: 3
+          periodSeconds: 5
         resources:
           requests:
             cpu: "{{ airsonic.container.requests_cpu }}"
@@ -71,10 +98,12 @@ spec:
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
+          readOnly: true
         - name: keystore-volume
           mountPath: /etc/ssl/certs/java
         - name: airsonic-data-pv-claim
           mountPath: /airsonic/data
+          subPath: data
         - name: airsonic-playlists-pv-claim
           mountPath: /airsonic/playlists
         - name: airsonic-multimedia
@@ -83,6 +112,8 @@ spec:
         # But mounting it enables the use of the reloader
         - name: airsonic-config
           mountPath: /config
+        - name: tmp-volume
+          mountPath: /tmp
       volumes:
       - name: tz-config
         hostPath:
@@ -98,6 +129,8 @@ spec:
         secret:
           secretName: cluster-ca
       - name: keystore-volume
+        emptyDir: {}
+      - name: tmp-volume
         emptyDir: {}
       nodeSelector:
         capability/general-purpose: 'yes'
