Implement manifest best practices for dev-gitlab

--- a/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/service.yaml.j2
@@ -9,6 +9,7 @@ metadata:
 spec:
   ports:
   - port: 80
-    targetPort: 80
+    name: gitlab
+    targetPort: gitlab
   selector:
     {{ gitlab.labels_def | to_nice_yaml() | indent(4) }}
