--- a/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/service.yaml.j2
@@ -9,7 +9,7 @@ metadata:
 spec:
   ports:
   - port: 80
-    targetPort: 8081
+    targetPort: sickchill
     name: web
   selector:
     {{ sickchill.labels_def | to_nice_yaml() | indent(4) }}
