--- a/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-sickchill.deploy/app/deploy/statefulset.yaml.j2
@@ -30,11 +30,25 @@ spec:
         - name: sickchill-config
           mountPath: /tmp/config
       containers:
-      - image: "{{ sickchill.container.image }}"
-        name: sickchill
+      - name: sickchill
+        image: "{{ sickchill.container.image }}"
+        imagePullPolicy: Always
         ports:
         - containerPort: 8081
           name: sickchill
+        securityContext:
+          # TODO : sickchill requires to run as root for now :/
+          #runAsNonRoot: true
+          #runAsUser: xxxx
+          #runAsGroup: xxxx
+          #readOnlyRootFilesystem: true
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: {{ sickchill.context_root }}
+            port: sickchill
+          initialDelaySeconds: 3
+          periodSeconds: 5
         resources:
           requests:
             cpu: "{{ sickchill.container.requests_cpu }}"
@@ -45,6 +59,7 @@ spec:
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
+          readOnly: true
         - name: sickchill-config-pv-claim
           mountPath: /config
         - name: sickchill-download
