Implement manifest best practices for dl-pyload

--- a/ansible/install_applications/roles/download-pyload.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/download-pyload.deploy/app/deploy/service.yaml.j2
@@ -9,7 +9,7 @@ metadata:
 spec:
   ports:
   - port: 80
-    targetPort: 8000
+    targetPort: webui
     name: webui
   selector:
     {{ pyload.labels_def | to_nice_yaml() | indent(4) }}
