--- a/ansible/install_applications/roles/download-pyload.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-pyload.deploy/app/deploy/statefulset.yaml.j2
@@ -21,11 +21,25 @@ spec:
         {{ pyload.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
-      - image: "{{ pyload.container.image }}"
-        name: pyload
+      - name: pyload
+        image: "{{ pyload.container.image }}"
+        imagePullPolicy: Always        
         ports:
         - containerPort: 8000
           name: webui
+        securityContext:
+          # TODO : pyload requires to run as root for now :/
+          #runAsNonRoot: true
+          #runAsUser: xxxx
+          #runAsGroup: xxxx
+          #readOnlyRootFilesystem: true
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: {{ pyload.context_root }}
+            port: webui
+          initialDelaySeconds: 3
+          periodSeconds: 5
         env:
           - name: PYLOAD_DEFAULT_USER
             value: "{{ pyload.default_user }}"
@@ -43,6 +57,7 @@ spec:
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
+          readOnly: true
         - name: pyload-config-pv-claim
           mountPath: /config
         - name: pyload-download
