Implement manifest best practices for dl-sabnzbd

--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/service.yaml.j2
@@ -9,7 +9,7 @@ metadata:
 spec:
   ports:
   - port: 80
-    targetPort: 8080
+    targetPort: http
     name: http
   selector:
     {{ sabnzbd.labels_def | to_nice_yaml() | indent(4) }}
