--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/statefulset.yaml.j2
@@ -30,11 +30,25 @@ spec:
         - name: sabnzbd-config
           mountPath: /tmp/config
       containers:
-      - image: "{{ sabnzbd.container.image }}"
-        name: sabnzbd
+      - name: sabnzbd
+        image: "{{ sabnzbd.container.image }}"
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
           name: http
+        securityContext:
+          # TODO : sabnzbd requires to run as root for now :/
+          #runAsNonRoot: true
+          #runAsUser: xxxx
+          #runAsGroup: xxxx
+          #readOnlyRootFilesystem: true
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: {{ sabnzbd.context_root }}
+            port: http
+          initialDelaySeconds: 3
+          periodSeconds: 5
         resources:
           requests:
             cpu: "{{ sabnzbd.container.requests_cpu }}"
@@ -45,6 +59,7 @@ spec:
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
+          readOnly: true
         - name: sabnzbd-config-pv-claim
           mountPath: /config
         - name: sabnzbd-download
