Use a custom TTRSS docker image Replaces the deprecated LinuxServer image.

--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ingress.yaml.j2
@@ -18,4 +18,4 @@ spec:
         - path: {{ ttrss.context_root }}
           backend:
             serviceName: ttrss
-            servicePort: 80
+            servicePort: ttrss
