--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-service.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-service.yaml.j2
@@ -8,6 +8,7 @@ metadata:
     {{ ttrss.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   ports:
-  - port: 80
+  - port: 8080
+    name: ttrss
   selector:
     {{ ttrss.labels_def | to_nice_yaml() | indent(4) }}
