--- a/ansible/install_applications/roles/web-ttrss.deploy/app/config/config.php.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/config/config.php.j2
@@ -42,7 +42,7 @@
 	// *** Files and directories ***
 	// *****************************
 
-	define('PHP_EXECUTABLE', '/usr/bin/php');
+	define('PHP_EXECUTABLE', '/usr/local/bin/php');
 	// Path to PHP *COMMAND LINE* executable, used for various command-line tt-rss
 	// programs and update daemon. Do not try to use CGI binary here, it won't work.
 	// If you see HTTP headers being displayed while running tt-rss scripts,
