--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/networkPolicies.yaml.j2
@@ -20,24 +20,27 @@ spec:
       from:
         - podSelector:
             matchLabels:
-              {{ ttrss.labels_def | to_nice_yaml() | indent(14) }}
+              {{ ttrss.labels_web_def | to_nice_yaml() | indent(14) }}
+        - podSelector:
+            matchLabels:
+              {{ ttrss.labels_job_def | to_nice_yaml() | indent(14) }}
 
 ---
 
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: allow-to-ttrss-server
+  name: allow-to-ttrss-web
   namespace: {{ ttrss.namespace }}
   labels:
-    {{ ttrss.labels_def | to_nice_yaml() | indent(4) }}
+    {{ ttrss.labels_web_def | to_nice_yaml() | indent(4) }}
     {{ ttrss.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      {{ ttrss.labels_def | to_nice_yaml() | indent(6) }}
+      {{ ttrss.labels_web_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from the ingress controller
