--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-job-deployment.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-job-deployment.yaml.j2
@@ -1,44 +1,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ttrss-web
+  name: ttrss-job
   namespace: {{ ttrss.namespace }}
   labels:
-    {{ ttrss.labels_def | to_nice_yaml() | indent(4) }}
+    {{ ttrss.labels_job_def | to_nice_yaml() | indent(4) }}
     {{ ttrss.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      {{ ttrss.labels_def | to_nice_yaml() | indent(6) }}
+      {{ ttrss.labels_job_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        {{ ttrss.labels_def | to_nice_yaml() | indent(8) }}
+        {{ ttrss.labels_job_def | to_nice_yaml() | indent(8) }}
         {{ ttrss.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
       containers:
       - name: ttrss-web
         image: "{{ ttrss.container.image }}"
         imagePullPolicy: Always
+        args: ["job"]
         env:
         - name: TTRSS_CONTEXT_ROOT
           value: {{ ttrss.context_root }}
-        ports:
-        - containerPort: 8080
-          name: ttrss
         securityContext:
           runAsNonRoot: true
           runAsUser: 33 # www-data
         #  readOnlyRootFilesystem: true
-        readinessProbe:
-          httpGet:
-            scheme: HTTP
-            path: {{ ttrss.context_root }}/
-            port: ttrss
         resources:
           requests:
             cpu: "{{ ttrss.container.requests_cpu }}"
