Enable readOnlyRootFilesystem for TTRSS

--- a/ansible/install_applications/roles/web-ttrss.deploy/app/config/config.php.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/config/config.php.j2
@@ -49,15 +49,15 @@
 	// then most probably you are using the CGI binary. If you are unsure what to
 	// put in here, ask your hosting provider.
 
-	define('LOCK_DIRECTORY', 'lock');
+	define('LOCK_DIRECTORY', '/tmp/tt-rss/lock');
 	// Directory for lockfiles, must be writable to the user you run
 	// daemon process or cronjobs under.
 
-	define('CACHE_DIR', 'cache');
+	define('CACHE_DIR', '/tmp/tt-rss/cache');
 	// Local cache directory for RSS feed content.
 
-	define('ICONS_DIR', "feed-icons");
-	define('ICONS_URL', "feed-icons");
+	define('ICONS_DIR', "/tmp/tt-rss/feed-icons");
+	define('ICONS_URL', "/tmp/tt-rss/feed-icons");
 	// Local and URL path to the directory, where feed favicons are stored.
 	// Unless you really know what you're doing, please keep those relative
 	// to tt-rss main directory.
