--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-job-deployment.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-job-deployment.yaml.j2
@@ -28,10 +28,12 @@ spec:
         env:
         - name: TTRSS_CONTEXT_ROOT
           value: {{ ttrss.context_root }}
+        - name: TTRSS_RUN_ROOT_DIR
+          value: /tmp/tt-rss
         securityContext:
           runAsNonRoot: true
           runAsUser: 33 # www-data
-        #  readOnlyRootFilesystem: true
+          readOnlyRootFilesystem: true
         resources:
           requests:
             cpu: "{{ ttrss.container.requests_cpu }}"
