--- a/ansible/install_applications/roles/_base.deploy/templates/namespace/nas-nfs-persistent-volume.yaml.j2
+++ b/ansible/install_applications/roles/_base.deploy/templates/namespace/nas-nfs-persistent-volume.yaml.j2
@@ -12,7 +12,7 @@ metadata:
 spec:
   capacity:
     storage: 1M
-  accessModes: [ "ReadWriteMany" ]
+  accessModes: [ "ReadWriteOnce", "ReadOnlyMany", "ReadWriteMany" ]
   persistentVolumeReclaimPolicy: {{ item.value.reclaim_policy }}
   storageClassName: {{ kubernetes_nas_nfs_storage_class_name }}
   nfs:
