--- a/ansible/install_infra/roles/kubernetes-storage/templates/glusterfs-persistent-volume.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes-storage/templates/glusterfs-persistent-volume.yaml.j2
@@ -11,7 +11,7 @@ metadata:
 spec:
   capacity:
     storage: {{ item.value.capacity }}
-  accessModes: [ "ReadWriteOnce" ]
+  accessModes: [ "ReadWriteOnce", "ReadOnlyMany", "ReadWriteMany" ]
   persistentVolumeReclaimPolicy: {{ item.value.reclaim_policy }}
   storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
   glusterfs:
