--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-web-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-web-statefulSet.yaml.j2
@@ -1,39 +1,63 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: ttrss-job
+  name: ttrss-web
   namespace: {{ ttrss.namespace }}
   labels:
-    {{ ttrss.labels_job_def | to_nice_yaml() | indent(4) }}
+    {{ ttrss.labels_web_def | to_nice_yaml() | indent(4) }}
     {{ ttrss.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      {{ ttrss.labels_job_def | to_nice_yaml() | indent(6) }}
+      {{ ttrss.labels_web_def | to_nice_yaml() | indent(6) }}
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        {{ ttrss.labels_job_def | to_nice_yaml() | indent(8) }}
+        {{ ttrss.labels_web_def | to_nice_yaml() | indent(8) }}
         {{ ttrss.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
+      initContainers:
+      - name: create-folders
+        image: "{{ busybox.container.image }}"
+        imagePullPolicy: Always
+        command:
+          - "sh"
+          - "-c"
+          - |
+            mkdir -p /opt/ttrss-data/feed-icons
+            mkdir -p /opt/ttrss-data/cache/images
+            mkdir -p /opt/ttrss-data/cache/export
+            mkdir -p /opt/ttrss-data/cache/upload
+            mkdir -p /opt/ttrss-data/lock
+            chown -R 33:33 /opt/ttrss-data/
+        volumeMounts:
+        - name: ttrss-data-pv-claim
+          mountPath: /opt/ttrss-data
       containers:
       - name: ttrss-web
         image: "{{ ttrss.container.image }}"
         imagePullPolicy: Always
-        args: ["job"]
         env:
         - name: TTRSS_CONTEXT_ROOT
           value: {{ ttrss.context_root }}
         - name: TTRSS_RUN_ROOT_DIR
-          value: /tmp/tt-rss
+          value: /opt/ttrss-data
+        ports:
+        - containerPort: 8080
+          name: ttrss
         securityContext:
           runAsNonRoot: true
           runAsUser: 33 # www-data
           readOnlyRootFilesystem: true
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: {{ ttrss.context_root }}/
+            port: ttrss
         resources:
           requests:
             cpu: "{{ ttrss.container.requests_cpu }}"
@@ -45,6 +69,8 @@ spec:
         - name: tz-config
           mountPath: /etc/localtime
           readOnly: true
+        - name: ttrss-data-pv-claim
+          mountPath: /opt/ttrss-data
         - name: ttrss-config
           mountPath: /opt/ttrss/config.php
           subPath: config.php
@@ -57,6 +83,9 @@ spec:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      - name: ttrss-data-pv-claim
+        persistentVolumeClaim:
+          claimName: ttrss-data-pv-claim
       - name: ttrss-config
         configMap:
           name: ttrss-config
