--- a/ansible/install_applications/roles/web-homer.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/web-homer.deploy/app/deploy/deployment.yaml.j2
@@ -54,8 +54,8 @@ spec:
           mountPath: /etc/localtime
           readOnly: true
         - name: homer-config
-          mountPath: /opt/homer/config.yaml
-          subPath: config.yaml
+          mountPath: /opt/homer/config.yml
+          subPath: config.yml
       volumes:
       - name: tz-config
         hostPath:
