Add a way to pre-download logos for Homer

--- a/ansible/install_applications/roles/web-homer.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/web-homer.deploy/app/deploy/configMap.yaml.j2
@@ -9,3 +9,5 @@ metadata:
 data:
   config.yml: |
     {{ lookup('template', role_path + '/app/config/config.yml.j2')  | replace('\n', '\n    ') }}
+  images.csv: |
+    {{ lookup('template', role_path + '/app/config/images.csv.j2')  | replace('\n', '\n    ') }}
