--- a/ansible/install_applications/roles/web-homer.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/web-homer.deploy/app/deploy/deployment.yaml.j2
@@ -31,10 +31,9 @@ spec:
         - name: HOMER_CONTEXT_ROOT
           value: "{{ homer.context_root }}"
         securityContext:
-          # TODO : homer requires to run as root and write to the rootFS for now :/
-          #runAsNonRoot: true
-          #runAsUser: 101 # nginx
-          #readOnlyRootFilesystem: true
+          runAsNonRoot: true
+          runAsUser: 101 # nginx
+          readOnlyRootFilesystem: true
         resources:
           requests:
             cpu: "{{ homer.container.requests_cpu }}"
@@ -42,13 +41,13 @@ spec:
           limits:
             cpu: "{{ homer.container.limits_cpu }}"
             memory: "{{ homer.container.limits_memory }}"
-        #readinessProbe:
-        #  httpGet:
-        #    scheme: HTTP
-        #    path: /
-        #    port: http
-        #  initialDelaySeconds: 3
-        #  periodSeconds: 5
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: {{ homer.context_root }}
+            port: http
+          initialDelaySeconds: 3
+          periodSeconds: 5
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
