Add watcher configuration for web-homer

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -467,6 +467,22 @@ watchers:
   ##############
   # Apps : Web #
   ##############
+  - name: Homer NGinx
+    type: docker_registry
+    repo: {{ homer.base_image.repo | default('registry-1.docker.io') }}
+    image: {{ homer.base_image.name }}
+    tag: {{ homer.base_image.tag }}
+    includes:
+      - ^[0-9]+\.[0-9]+\.[0-9]+-alpine$
+    excludes:
+      - ^1\.[0-9]\..*-alpine$
+      - ^1\.1[0-6]\..*-alpine$
+  - name: Homer
+    type: github_commit
+    repo: bastienwirtz/homer
+    branch: master
+    commit: {{ homer.commit }}
+    
   - name: TT-RSS PHP
     type: docker_registry
     repo: {{ ttrss.base_image.repo | default('registry-1.docker.io') }}
@@ -506,4 +522,3 @@ watchers:
     tag: {{ ttrss_pgsql.base_image.tag }}
     includes:
       - ^11\.[0-9]+(\.[0-9]+)?-alpine
-
