--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/ingress.yaml.j2
@@ -6,10 +6,6 @@ metadata:
   labels:
     {{ deluge.labels_def | to_nice_yaml() | indent(4) }}
     {{ deluge.labels_desc | to_nice_yaml() | indent(4) }}
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      proxy_set_header X-Deluge-Base "{{ deluge.context_root }}";
 spec:
   tls:
     - hosts:
@@ -19,7 +15,7 @@ spec:
   - host: dl.{{ web_base_domain }}
     http:
       paths:
-      - path: {{ deluge.context_root }}/?(.*)
+      - path: {{ deluge_web.context_root }}
         backend:
-          serviceName: deluge
-          servicePort: 80
+          serviceName: deluge-web
+          servicePort: webui
