--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/networkPolicies.yaml.j2
@@ -1,17 +1,17 @@
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: allow-to-deluge
+  name: allow-to-deluge-web
   namespace: {{ deluge.namespace }}
   labels:
-    {{ deluge.labels_def | to_nice_yaml() | indent(4) }}
-    {{ deluge.labels_desc | to_nice_yaml() | indent(4) }}
+    {{ deluge_web.labels_def | to_nice_yaml() | indent(4) }}
+    {{ deluge_web.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      {{ deluge.labels_def | to_nice_yaml() | indent(6) }}
+      {{ deluge_web.labels_def | to_nice_yaml() | indent(6) }}
 
   ingress:
     # Allow from the ingress controller
