--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/networkPolicies.yaml.j2
@@ -1,3 +1,30 @@
+
+kind: NetworkPolicy
+apiVersion: networking.k8s.io/v1
+metadata:
+  name: allow-to-deluge-daemon
+  namespace: {{ deluge.namespace }}
+  labels:
+    {{ deluge_daemon.labels_def | to_nice_yaml() | indent(4) }}
+    {{ deluge_daemon.labels_desc | to_nice_yaml() | indent(4) }}
+spec:
+  types: [Ingress]
+
+  podSelector:
+    matchLabels:
+      {{ deluge_daemon.labels_def | to_nice_yaml() | indent(6) }}
+
+  ingress:
+    # Allow from deluge-web
+    - ports:
+        - port: daemon
+      from:
+        - podSelector:
+            matchLabels:
+              {{ deluge_web.labels_def | to_nice_yaml() | indent(14) }}
+
+---
+
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
