--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/web-statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/web-statefulset.yaml.j2
@@ -6,6 +6,8 @@ metadata:
   labels:
     {{ deluge_web.labels_def | to_nice_yaml() | indent(4) }}
     {{ deluge_web.labels_desc | to_nice_yaml() | indent(4) }}
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
@@ -40,7 +42,7 @@ spec:
           name: webui
         env:
         - name: "DELUGE_CONF_WEB_DEFAULT_DAEMON"
-          value: "deluge-daemon:58846"
+          value: "deluge-daemon"
         - name: "DELUGE_CONF_WEB_PORT"
           value: "8112"
         - name: "DELUGE_CONF_WEB_HTTPS"
@@ -72,6 +74,12 @@ spec:
         - name: deluge-config
           mountPath: /home/deluge/.config/deluge
           subPath: config
+        - name: deluge-secret
+          mountPath: /home/deluge/.config/deluge/auth
+          subPath: auth
+        - name: deluge-secret
+          mountPath: /home/deluge/.config/deluge/hostlist.conf
+          subPath: hostlist.conf
         - name: tmp-volume
           mountPath: /tmp
       volumes:
@@ -81,6 +89,9 @@ spec:
       - name: deluge-config
         persistentVolumeClaim:
           claimName: deluge-config-pv-claim
+      - name: deluge-secret
+        secret:
+          secretName: deluge-secret
       - name: tmp-volume
         emptyDir: {}
       nodeSelector:
