--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/web-statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/web-statefulset.yaml.j2
@@ -53,13 +53,13 @@ spec:
           runAsNonRoot: true
           runAsUser: 1000 # deluge
           readOnlyRootFilesystem: true
-        #readinessProbe:
-        #  httpGet:
-        #    scheme: HTTP
-        #    path: {{ deluge_web.context_root }}
-        #    port: webui
-        #  initialDelaySeconds: 3
-        #  periodSeconds: 5
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: {{ deluge_web.context_root }}
+            port: webui
+          initialDelaySeconds: 3
+          periodSeconds: 10
         resources:
           requests:
             cpu: "{{ deluge_web.container.requests_cpu }}"
